[package]
name = "hiring-buddy"
version = "0.2.0"
authors = ["Matt Rabitsky <mdr.dev@protonmail.com>"]
edition = "2018"
publish = false
description = "A command-line tool that runs in the background, periodically checking various Subreddits for new posts and pinging Discord whenever a new post is detected."

[dependencies]
lazy_static = "^1.3.0"
regex = "^1.1.6"
reqwest = "^0.9.16"
ron = "^0.5.1"
serde = { version = "^1.0.91", features = ["derive"] }
serenity = "^0.5.13"
structopt = "^0.2.15"
